# eco-strategy

./: docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_init.sql  002_game_snapshots.sql
backend/src/: engine.rs  game.rs  handlers.rs  main.rs  models.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: ActionPanel.tsx  ClimateAlert.tsx  EvolutionPanel.tsx  FoodWebGraph.tsx  GameView.tsx  HexMap.tsx  Lobby.tsx  PlayerBar.tsx  Replay.tsx  SpeciesPanel.tsx  TurnResultModal.tsx
